--- a/build.gradle
+++ b/build.gradle
@@ -20,14 +20,14 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.kafka:spring-kafka'
+//	implementation 'org.springframework.kafka:spring-kafka'
 	implementation group: 'com.google.geometry', name: 's2-geometry', version: '2.0.0'
 
 	// Geotools dependencies
 	implementation group:'org.geotools', name:'gt-main', version:'27.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.kafka:spring-kafka-test'
+//	testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 tasks.named('test') {
