--- a/build.gradle
+++ b/build.gradle
@@ -20,14 +20,15 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.kafka:spring-kafka'
 	implementation group: 'com.google.geometry', name: 's2-geometry', version: '2.0.0'
+    implementation 'org.flywaydb:flyway-core:7.8.2'
+    implementation 'io.r2dbc:r2dbc-postgresql:0.8.11.RELEASE'
+    implementation 'org.springframework.data:spring-data-r2dbc:1.4.1'
 
 	// Geotools dependencies
 	implementation group:'org.geotools', name:'gt-main', version:'27.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 tasks.named('test') {
